[package]
name = "axum-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = "0.6.7"
dotenvy = "0.15.6"
futures = "0.3.26"
hyper = { version = "0.14.24", features = ["full"] }
mockall = "0.11.3"
mockall_double = "0.3.0"
mongodb = "2.3.1"
predicates = "2.1.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.3.5", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
